--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,14 @@
 		<meta name="description" content="Svelte demo app" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="manifest" href="manifest.json">
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
 		%sveltekit.head%
 	</head>
 	<body >
